--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div id="resume" class="tab-content">
             <h2>Download Resume</h2>
             <div class="download-container">
-                <p>Click the button below to download my detailed resume.</p><button class="download-button" onclick="window.open('resume.pdf')">Download Resume</button>
+                <p>Click the button below to download my detailed resume.</p><button class="download-button" onclick="window.open('Copy of White and Beige Simple Student CV Resume_20250325_120243_0000.pdf')">Download Resume</button>
             </div>
         </div>
 
