--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
     <div class="container">
         <!-- Profile Photo -->
-        <img src="https://via.placeholder.com/120" alt="Profile Photo">
+        <img src="IMG-20250325-WA0035.jpg" alt="Profile Photo">
         
         <!-- Header Section -->
         <header>
